# nginx-ingress-controller-armada-app

./: .gitreview  .zuul.yaml  HACKING.rst  centos_iso_image.inc  centos_pkg_dirs  centos_tarball-dl.lst  debian_bullseye_iso_image_std.inc  debian_pkg_dirs
nginx-ingress-controller-helm/: Readme.rst
nginx-ingress-controller-helm/centos/: nginx-ingress-controller-helm.spec
nginx-ingress-controller-helm/files/: 0001-Update-for-kubernetes-API-1.16.patch
python-k8sapp-nginx-ingress-controller/centos/: build_srpm.data  python-k8sapp-nginx-ingress-controller.spec
python-k8sapp-nginx-ingress-controller/debian/: meta_data.yaml
python-k8sapp-nginx-ingress-controller/k8sapp_nginx_ingress_controller/: .stestr.conf  pylint.rc  setup.cfg  tox.ini  upper-constraints.txt
python-k8sapp-nginx-ingress-controller/k8sapp_nginx_ingress_controller/k8sapp_nginx_ingress_controller/common/: constants.py
python-k8sapp-nginx-ingress-controller/k8sapp_nginx_ingress_controller/k8sapp_nginx_ingress_controller/helm/: ingress_nginx.py
python-k8sapp-nginx-ingress-controller/k8sapp_nginx_ingress_controller/k8sapp_nginx_ingress_controller/lifecycle/: lifecycle_nginx_ingress_controller.py
python-k8sapp-nginx-ingress-controller/k8sapp_nginx_ingress_controller/k8sapp_nginx_ingress_controller/tests/: test_plugins.py
python3-k8sapp-nginx-ingress-controller/debian/: meta_data.yaml
python3-k8sapp-nginx-ingress-controller/k8sapp_nginx_ingress_controller/: README.rst  pylint.rc  requirements.txt  setup.cfg  tox.ini
stx-nginx-ingress-controller-helm/centos/: build_srpm.data  (+1 more)
(+51 files in other folders)
