[metadata]
name = k8sapp-nginx-ingress_controller
summary = StarlingX sysinv extensions for nginx ingress controller
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_nginx_ingress_controller

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

systemconfig.app_lifecycle =
    nginx-ingress-controller = k8sapp_nginx_ingress_controller.lifecycle.lifecycle_nginx_ingress_controller:NginxIngressControllerAppLifecycleOperator

[wheel]
universal = 1
